--- a/frontend-ifn/src/components/DataTable/DataTable.scss
+++ b/frontend-ifn/src/components/DataTable/DataTable.scss
@@ -2,17 +2,17 @@
 @import "../../styles/mixins";
 
 .data-table-container {
-  margin: $medium-spacing;
-  padding: $medium-spacing;
+  overflow-x: auto;
 
   .MuiDataGrid-root {
-    border: 1px solid $border-color;
+    border: 2px solid $border-color;
+    min-width: 100%;
   }
 
   .MuiDataGrid-columnHeaders {
     background-color: lighten($primary-color, 40%);
     color: $text-color;
-    font-weight: bold;
+    font-weight: 500;
   }
 
   .MuiDataGrid-cell {
