--- a/frontend-ifn/src/components/DataTable/DataTable.scss
+++ b/frontend-ifn/src/components/DataTable/DataTable.scss
@@ -2,46 +2,77 @@
 @import "../../styles/mixins";
 
 .data-table-container {
-  overflow-x: auto;
+  height: 600px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+  .action-buttons-container {
+    position: absolute;
+    top: -$large-spacing;
+    right: 0;
+    z-index: 3;
+  }
+
+  .data-grid-wrapper {
+    flex-grow: 1;
+    overflow: auto;
+
+    @include scrollbar(8px, $secondary-color);
+  }
 
   .MuiDataGrid-root {
     border: 2px solid $border-color;
-    min-width: 100%;
+    width: 100%;
+    height: 100%;
   }
 
   .MuiDataGrid-columnHeaders {
-    background-color: lighten($primary-color, 40%);
+    background-color: mix(white, $primary-color, 40%);
     color: $text-color;
-    font-weight: 500;
+    font-weight: $font-weight-bold;
+    @include sticky-header;
   }
 
   .MuiDataGrid-cell {
     border-bottom: 1px solid $border-color;
   }
 
-  .action-buttons {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: $medium-spacing;
+  .MuiDataGrid-columnHeaderTitle {
+    font-weight: $font-weight-bold;
+  }
 
-    .action-button {
-      margin-left: $small-spacing;
-      padding: $small-spacing;
-      display: flex;
-      align-items: center;
-      background-color: $primary-color;
-      color: $background-color;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
+  .MuiDataGrid-menuIcon {
+    color: $accent-color;
+  }
 
-      &:hover {
-        background-color: darken($primary-color, 10%);
-      }
+  .MuiDataGrid-footerContainer {
+    border-top: 1px solid $border-color;
+  }
+}
 
-      svg {
-        margin-right: $small-spacing;
-      }
+.action-buttons {
+  @include flex-container(8px);
+
+  .action-button {
+    @include button-reset;
+    @include flex-center;
+    width: 40px;
+    height: 40px;
+    background-color: $secondary-color;
+    color: $text-color;
+    border-radius: $button-border-radius;
+    @include transition(background-color);
+
+    &:hover {
+      background-color: darken($secondary-color, 10%);
     }
   }
+}
+
+// Adăugăm stilurile pentru tooltip
+.custom-tooltip {
+  font-size: $font-size-small;
+  padding: $small-spacing;
 }
