--- a/frontend-ifn/src/styles/_mixins.scss
+++ b/frontend-ifn/src/styles/_mixins.scss
@@ -83,3 +83,43 @@
   border-bottom: 1px solid $border-color;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+@mixin scrollbar($width, $color) {
+  &::-webkit-scrollbar {
+    width: $width;
+    height: $width;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: lighten($color, 45%);
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $color;
+    border-radius: 4px;
+  }
+
+  scrollbar-width: thin;
+  scrollbar-color: $color lighten($color, 45%);
+}
+
+@mixin sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+
+@mixin flex-container($gap) {
+  display: flex;
+  gap: $gap;
+}
+
+@mixin button-reset {
+  padding: 0;
+  border: none;
+  background: none;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+}
