--- a/frontend-ifn/src/components/DataTable/DataTable.scss
+++ b/frontend-ifn/src/components/DataTable/DataTable.scss
@@ -68,15 +68,15 @@
     padding: $small-spacing;
 
     .MuiButtonBase-root {
-      color: $accent-color;
-      @include transition(background-color);
-
-      &:hover {
-        background-color: rgba($accent-color, 0.1);
-      }
+      color: $text-color;
 
       .MuiSvgIcon-root {
-        fill: $accent-color;
+        color: inherit;
+      }
+
+      &:hover {
+        background-color: $accent-color;
+        color: $background-color;
       }
     }
   }
