--- a/frontend-ifn/src/pages/Contabilitate/NoteContabile/NoteContabile.scss
+++ b/frontend-ifn/src/pages/Contabilitate/NoteContabile/NoteContabile.scss
@@ -2,5 +2,14 @@
 @import "../../../styles/mixins";
 
 .note-contabile {
-  // Stiluri specifice pentru pagina Note Contabile
+  padding: 20px;
+
+  h1 {
+    margin-bottom: 20px;
+  }
+
+  .py-20 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
